# online-group-trivia-server

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml  postman
.github/workflows/: docker-image.yml  publish-docker-image.yml  rust.yml
database/: Cargo.toml
database/src/: data_model.rs  lib.rs  mongo_db.rs
interfaces/: Cargo.toml
interfaces/src/: lib.rs
pub-sub/: Cargo.toml
pub-sub/src/: lib.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: integration_tests.rs
src/: data_model.rs  database_logic.rs  logic.rs  main.rs
src/database/: data_model.rs  database_logic.rs  mod.rs  mongo_db.rs
src/websocket/: mod.rs  websocket_handler.rs  websocket_routing.rs
websocket/: Cargo.toml
websocket/src/: lib.rs  websocket_handler.rs  websocket_routing.rs
