[package]
name = "online-group-trivia-server"
version = "0.1.0"
authors = ["Eden <edenyefet@gmail.com>"]
edition = "2018"

[[bin]]
name = "app"
path = "src/main.rs"

[dependencies]
actix-web = "3"
actix-cors = "0.5.4"
simple-error = "0.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
redis = "0.19.0"
serde_json = "1.0"
serde = "1.0.118"
