[package]
name = "database"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
interfaces = {path = "../interfaces"}
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = { version = "1.0.120", features = ["derive"] }
mongodb = "1.1.1"