[package]
name = "interfaces"
version = "0.1.0"
authors = ["dantepli <dan932@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = { version = "1.0.120", features = ["derive"] }