[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
database = {path = "../database"}
interfaces = {path = "../interfaces"}
websocket = {path = "../websocket"}

actix-web = "3"
actix = "0.10.0"
actix-cors = "0.5.4"
actix-web-actors = "3.0.0"
simple-error = "0.2.2"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde_json = "1.0"
serde = "1.0.120"
rand = "0.8.2"
log = "0.4.13"
env_logger = "0.8.2"

[dev-dependencies]
actix-rt = "1.1.1"