[package]
name = "websocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.10.0"
actix-web-actors = "3.0.0"
serde_json = "1.0"
serde = "1.0.120"
uuid = { version = "0.8", features = ["serde", "v4"] }